Removed debugging print statements

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "array([1, 1, 0])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,44 +242,13 @@
     "            node_aggr_dict, edge_emb_dict = conv(x_dict,edge_inp_dict,edge_index_dict)\n",
     "            x_dict = self.UpdateNodeEmbeddings(x_dict,node_aggr_dict,node_updater)\n",
     "            displacements += decoder(x_dict['particle'])\n",
-    "\n",
-    "            print('Loop completed')\n",
     "        \n",
     "        return displacements,node_aggr_dict, edge_emb_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "particle\n",
-      "tensor([[-1.5903, -0.4444,  0.5416, -1.0015,  0.4334],\n",
-      "        [-0.8528, -0.5949,  1.5248, -1.3680, -0.1979]], dtype=torch.float64, grad_fn=<AddBackward0>)\n",
-      "Loop completed\n",
-      "particle\n",
-      "tensor([[-1.4263, -0.6852,  0.6627, -0.9885,  0.3688],\n",
-      "        [-1.1636, -0.5070,  1.4277, -1.4932, -0.1385]], dtype=torch.float64, grad_fn=<AddBackward0>)\n",
-      "Loop completed\n",
-      "particle\n",
-      "tensor([[-1.6387, -0.4910,  0.6054, -1.0532,  0.3945],\n",
-      "        [-0.9049, -0.6625,  1.5011, -1.4135, -0.1769]], dtype=torch.float64, grad_fn=<AddBackward0>)\n",
-      "Loop completed\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = HeteroDEMGNN(data.metadata(),msg_num=3,emb_dim=5,hidden_dim=5,num_layers=2)\n",
-    "displacements, node_aggr_dict, edge_emb_dict2 = model(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -289,62 +258,15 @@
        "        [-0.4411, -0.8124, -1.5597]], dtype=torch.float64, grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "model = HeteroDEMGNN(data.metadata(),msg_num=3,emb_dim=5,hidden_dim=5,num_layers=2)\n",
+    "displacements, node_aggr_dict, edge_emb_dict2 = model(data)\n",
     "displacements"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out['particle']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = dataset[0]\n",
-    "data['particle'].x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for edgetype in data.metadata()[1]:\n",
-    "    print(*edgetype)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch_geometric.transforms as T\n",
-    "pre_transform = T.Compose([T.ToUndirected(),T.Cartesian(False),T.Distance(norm=False,cat=True)])\n",
-    "data = pre_transform(data['particle'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['particle'].y"
    ]
   },
   {
