Model with geometry updating and saving model and training info

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -40,7 +40,6 @@
     "import json \n",
     "\n",
     "from tqdm import tqdm, trange\n",
-    "from torch_geometric.nn.models import MLP\n",
     "from IPython.display import clear_output\n",
     "\n",
     "print(torch.cuda.is_available())\n",
@@ -57,215 +56,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ML_functions import HeteroDEMDataset\n",
-    "dataset = HeteroDEMDataset('2Sphere',force_reload=False)"
+    "from HeteroML import HeteroDEMDataset\n",
+    "dataset = HeteroDEMDataset('2Sphere','test',force_reload=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = dataset[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{('particle',\n",
-       "  'PP_contact',\n",
-       "  'particle'): tensor([[0, 1],\n",
-       "         [1, 0]]),\n",
-       " ('particle',\n",
-       "  'PW_contact',\n",
-       "  'wallpoint'): tensor([[0, 1, 0, 0, 1, 1],\n",
-       "         [0, 1, 2, 3, 4, 5]]),\n",
-       " ('wallpoint',\n",
-       "  'rev_PW_contact',\n",
-       "  'particle'): tensor([[0, 1, 2, 3, 4, 5],\n",
-       "         [0, 1, 0, 0, 1, 1]])}"
+       "tensor([[ 7.6040e-05, -7.6023e-05,  9.6783e-04],\n",
+       "        [-3.8476e-05,  3.4192e-05,  1.4799e-03]], device='cuda:0', dtype=torch.float64, grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.edge_index_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 0])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.array([0,0,1])\n",
-    "d = np.array([1,1,1])\n",
-    "d-(d*a)*a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch_geometric.nn import MessagePassing\n",
-    "class EdgeConv(MessagePassing):\n",
-    "    def __init__(self,emb_dim,hidden_dim,num_layers, aggr = 'mean', ):\n",
-    "        torch.manual_seed(42)\n",
-    "        super().__init__(aggr=aggr)\n",
-    "        self.msg_mlp = MLP(in_channels=8+2*emb_dim,hidden_channels=hidden_dim,out_channels=hidden_dim,num_layers=num_layers)\n",
-    "        self.node_mlp = MLP(in_channels=hidden_dim+emb_dim,hidden_channels=hidden_dim,out_channels=emb_dim,num_layers=num_layers)\n",
-    "        self.edge_mlp = MLP(in_channels=hidden_dim,hidden_channels=hidden_dim,out_channels=emb_dim,num_layers=num_layers)\n",
-    "\n",
-    "\n",
-    "    def forward(self,x,edge_attr,edge_index):\n",
-    "        node_emb = self.propagate(edge_index,x=x,edge_attr=edge_attr)\n",
-    "        edge_emb = self.edge_updater(edge_index,x=x,edge_attr=edge_attr)\n",
-    "        return node_emb, edge_emb\n",
-    "        \n",
-    "    def message(self, x_j, edge_attr):\n",
-    "        tmp = torch.cat([x_j, edge_attr],dim=1)\n",
-    "        return self.msg_mlp(tmp)\n",
-    "    \n",
-    "    def edge_update(self, x_j, edge_attr):\n",
-    "        message = self.message(x_j,edge_attr)\n",
-    "        return self.edge_mlp(message)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from HeteroML import HeteroConvEdge\n",
-    "from ML_functions import CartesianHetero, DistanceHetero\n",
-    "\n",
-    "class HeteroDEMGNN(torch.nn.Module):\n",
-    "    def __init__(self,metadata, msg_num,emb_dim,hidden_dim,num_layers):\n",
-    "        torch.manual_seed(42)\n",
-    "        super().__init__()\n",
-    "        self.nodetypes = metadata[0]\n",
-    "        self.edgetypes = metadata[1]\n",
-    "\n",
-    "        self.edge_embed_mlp = MLP(in_channels=4,hidden_channels=emb_dim,out_channels=emb_dim,num_layers=num_layers)\n",
-    "        self.node_embed_mlp = torch.nn.ModuleDict()\n",
-    "        for nodetype in metadata[0]:\n",
-    "            embed_mlp =MLP(in_channels=3,hidden_channels=emb_dim,out_channels=emb_dim,num_layers=num_layers)\n",
-    "            self.node_embed_mlp[nodetype] = embed_mlp\n",
-    "\n",
-    "        self.convs = torch.nn.ModuleList()\n",
-    "        self.node_updaters = torch.nn.ModuleList()\n",
-    "        self.decoders = torch.nn.ModuleList()\n",
-    "        for _ in range(msg_num):\n",
-    "            conv = HeteroConvEdge({edgetype:EdgeConv(emb_dim,hidden_dim,num_layers)\n",
-    "                                   for edgetype in self.edgetypes},aggr=\"mean\")\n",
-    "            decoder = MLP(in_channels=emb_dim,hidden_channels=hidden_dim,out_channels=3,num_layers=num_layers)\n",
-    "            node_updater = MLP(in_channels=emb_dim+hidden_dim,hidden_channels=hidden_dim,out_channels=emb_dim,num_layers=num_layers)\n",
-    "            self.convs.append(conv)\n",
-    "            self.node_updaters.append(node_updater)\n",
-    "            self.decoders.append(decoder)\n",
-    "        self.double()\n",
-    "\n",
-    "    def EmbedNodes(self,x_dict:dict) -> dict:\n",
-    "        node_emb_dict = {}\n",
-    "        for nodetype in self.nodetypes:\n",
-    "            node_emb_dict[nodetype] = self.node_embed_mlp[nodetype](x_dict[nodetype])\n",
-    "        return node_emb_dict\n",
-    "    \n",
-    "    def EmbedEdges(self,edge_attr_dict):\n",
-    "        edge_emb_dict = {}\n",
-    "        for edgetype in self.edgetypes:\n",
-    "            edge_emb_dict[edgetype] = self.edge_embed_mlp(edge_attr_dict[edgetype])\n",
-    "        return edge_emb_dict\n",
-    "    \n",
-    "    def MergeEdgeDicts(self,edge_ref_dict,edge_attr_dict,edge_emb_dict):\n",
-    "        edge_inp_dict = {}\n",
-    "        for edgetype in self.edgetypes:\n",
-    "            tensors = (edge_ref_dict[edgetype],edge_attr_dict[edgetype],edge_emb_dict[edgetype])\n",
-    "            edge_inp_dict[edgetype] = torch.cat(tensors,dim=1)\n",
-    "        return edge_inp_dict\n",
-    "\n",
-    "    def UpdateNodeEmbeddings(self,x_dict,node_aggr_dict,node_updater):\n",
-    "        for nodetype in self.nodetypes:\n",
-    "            tmp = torch.cat([x_dict[nodetype],node_aggr_dict[nodetype]],dim=1)\n",
-    "            x_dict[nodetype] = node_updater(tmp)\n",
-    "        return x_dict\n",
-    "\n",
-    "    def UpdateWallpointPos(self,data,displacements):\n",
-    "        particle_idx = data.edge_index_dict[self.edgetypes[1]][0]\n",
-    "        edge_disp = displacements[particle_idx]\n",
-    "        normal = data.x_dict['wallpoint']\n",
-    "        delta_wallpoint = edge_disp-(edge_disp*normal)*normal\n",
-    "        data.pos['wallpoint']+=delta_wallpoint\n",
-    "        return data\n",
-    "\n",
-    "    def UpdateGeometry(self,data, displacements):\n",
-    "        transform = T.compose(CartesianHetero(cat=False),DistanceHetero())\n",
-    "        data.pos_dict['particle']+=displacements\n",
-    "        data = self.UpdateWallpointPos(data,displacements)\n",
-    "        data = transform(data)\n",
-    "        return data\n",
-    "\n",
-    "    def forward(self,data):\n",
-    "        x_dict, edge_attr_dict, edge_index_dict = data.x_dict, data.edge_attr_dict, data.edge_index_dict\n",
-    "        edge_ref_dict = edge_attr_dict.copy()\n",
-    "\n",
-    "\n",
-    "        x_dict = self.EmbedNodes(x_dict)\n",
-    "        edge_emb_dict = self.EmbedEdges(edge_attr_dict)\n",
-    "\n",
-    "        displacements = 0 \n",
-    "        for conv,node_updater,decoder in zip(self.convs,self.node_updaters,self.decoders):\n",
-    "            edge_inp_dict = self.MergeEdgeDicts(edge_ref_dict,edge_attr_dict,edge_emb_dict)\n",
-    "            node_aggr_dict, edge_emb_dict = conv(x_dict,edge_inp_dict,edge_index_dict)\n",
-    "            x_dict = self.UpdateNodeEmbeddings(x_dict,node_aggr_dict,node_updater)\n",
-    "            displacements += decoder(x_dict['particle'])\n",
-    "        \n",
-    "        return displacements,node_aggr_dict, edge_emb_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 1.9091, -1.1430, -1.4626],\n",
-       "        [-0.4411, -0.8124, -1.5597]], dtype=torch.float64, grad_fn=<AddBackward0>)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model = HeteroDEMGNN(data.metadata(),msg_num=3,emb_dim=5,hidden_dim=5,num_layers=2)\n",
-    "displacements, node_aggr_dict, edge_emb_dict2 = model(data)\n",
+    "from HeteroML import HeteroDEMGNN\n",
+    "data = dataset[0]\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "model = HeteroDEMGNN('2Sphere',device,data.metadata(),msg_num=3,emb_dim=5,hidden_dim=5,num_layers=2)\n",
+    "displacements = model(data.to(device))\n",
     "displacements"
    ]
   },
@@ -329,8 +146,8 @@
    "source": [
     "from Plotting import PlotTrainingLoss\n",
     "dataset_name = '2Sphere'\n",
-    "model_ident = 'lr_medium'\n",
-    "fig,axs = PlotTrainingLoss(dataset_name,model_ident,push=True)\n",
+    "model_ident = 'Hetero'\n",
+    "fig,axs = PlotTrainingLoss(dataset_name,model_ident,push=False)\n",
     "\n",
     "fig.suptitle(f\"Model: {model_ident}\")\n"
    ]
@@ -926,7 +743,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DEM-GNN2",
+   "display_name": "DEM-GNN",
    "language": "python",
    "name": "python3"
   },
@@ -940,7 +757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
