--- a/Main.ipynb
+++ b/Main.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -219,8 +219,8 @@
     "    model = GetHeteroModel(dataset_name,model_ident)[0]\n",
     "    model.bundle_size = 1\n",
     "    scale_name = f\"{dataset_name}_Hetero\"\n",
-    "    transform = T.Compose([T.ToUndirected(),CartesianHetero(False),DistanceHetero(),NormalizeHeteroData(dataset_name,scale_name,edge_only=False)])\n",
-    "    Simulation = LearnedSimulatorHetero(model, scale_function = Rescale(dataset_name,scale_name),transform = transform,device='cpu')"
+    "    transform = T.Compose([T.ToUndirected(),CartesianHetero(False),DistanceHetero(),NormalizeHeteroData(dataset_name,scale_name,edge_only=False,model_ident=model_ident)])\n",
+    "    Simulation = LearnedSimulatorHetero(model, scale_function = Rescale(dataset_name,model_ident,scale_name),transform = transform,device='cpu')"
    ]
   },
   {
@@ -872,7 +872,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "DEM-GNN",
    "language": "python",
    "name": "python3"
   },
@@ -886,7 +886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
