Setup Train Overfit3

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -133,30 +133,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d:\\TUE\\Master\\Graduation\\Repos\\DEM-GNN\\Models\\N400_MonoNeo\\N400_MonoNeo_Overfit64\\N400_MonoNeo_Overfit64_train\n",
-      "d:\\TUE\\Master\\Graduation\\Repos\\DEM-GNN\\Models\\N400_MonoNeo\\N400_MonoNeo_Overfit64\\N400_MonoNeo_Overfit64_ModelInfo.json\n",
-      "Loaded model N400_MonoNeo_Overfit64\n"
+      "Loaded model N400_MonoNeo_Emb64\n"
      ]
     }
    ],
    "source": [
     "from Plotting import PlotXYZ, PlotStressComparison, legend_without_duplicate_labels\n",
-    "from ML_functions import LearnedSimulator, NormalizeData, GetModel, Rescale, NormalizePos, MaskTestData\n",
+    "from ML_functions import LearnedSimulator, NormalizeData, GetModel, Rescale, NormalizePos, MaskTestData, RemovePushFromName\n",
     "from Encoding import SaveRolloutAsJSON\n",
     "from Evaluation import ParticlesOutsideBoundary\n",
     "from HeteroML import GetHeteroModel,LearnedSimulatorHetero, CartesianHetero,DistanceHetero, NormalizeHeteroData\n",
     "\n",
     "dataset_name=\"N400_MonoNeo\"\n",
-    "model_ident = \"Overfit64\"\n",
+    "model_ident = \"Emb64\"\n",
     "hetero = True\n",
-    "\n",
+    "model_name = f\"{dataset_name}_{model_ident}\"\n",
     "AggregatedArgs = MaskTestData(dataset_name,\"train\")\n",
     "\n",
     "if hetero == False:\n",
@@ -174,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +186,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 196730.96it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 49944.08it/s]\n"
      ]
     },
     {
@@ -202,7 +200,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 341.80it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 205.14it/s]\n"
      ]
     },
     {
@@ -216,7 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100it [00:03, 25.43it/s]                       \n"
+      "100it [00:19,  5.14it/s]                       \n"
      ]
     }
    ],
@@ -238,21 +236,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum Particles outside boundaries: [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   2.   3.   4.   7.   8.  11.  13.  15.  17.  20.  21.  25.  26.  30.  32.  34.  36.  41.  46.  48.  52.  56.  56.\n",
-      "  57.  59.  59.  61.  61.  62.  64.  67.  69.  70.  71.  72.  73.  74.  75.  77.  77.  77.  78.  81.  82.  83.  83.  84.  87.  87.  88.  89.  89.  89.  89.  90.  91.  91.  92.  93.  94.  95.  98.\n",
-      "  98.  98. 100. 100. 100. 101. 101. 101. 102. 102. 103. 103. 105. 106. 108. 110. 112. 112. 112. 113. 113. 113.]\n"
+      "Maximum Particles outside boundaries: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
      ]
     }
    ],
    "source": [
     "print(f\"Maximum Particles outside boundaries: {ParticlesOutsideBoundary(Simulation.ML_rollout,Simulation.BC_rollout)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1640, -0.1044,  0.1531],\n",
+       "        [-0.3537, -0.4469, -0.3804],\n",
+       "        [ 0.3398,  0.0737, -0.0743],\n",
+       "        ...,\n",
+       "        [ 0.3949, -0.9515, -2.1760],\n",
+       "        [-0.1795,  1.0057, -2.1760],\n",
+       "        [-0.7028,  0.7604, -2.1760]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Simulation.GroundTruth[0].pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1640, -0.1044,  0.1531],\n",
+       "        [-0.3537, -0.4469, -0.3804],\n",
+       "        [ 0.3398,  0.0737, -0.0743],\n",
+       "        ...,\n",
+       "        [ 0.3949, -0.9515, -2.1760],\n",
+       "        [-0.1795,  1.0057, -2.1760],\n",
+       "        [-0.7028,  0.7604, -2.1760]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Simulation.ML_rollout[0].pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Simulation"
    ]
   },
   {
